--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "moment": "^2.30.1",
+    "morgan": "~1.9.1",
+    "os": "^0.1.2"
   }
 }
