--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -64,12 +64,10 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-Reactjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Change directory to frontend
-        run: cd frontend/
       - name: Install dependencies
-        run: npm install
+        run: cd ./frontend/ && npm install
       - name: Build with React.js
-        run: npm run build
+        run: cd ./frontend/ && npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
