--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup node
       uses: actions/setup-node@v4
       with:
-        node_version: '14.21.3'
+        node-version: '14.21.3'
     - name: Install dependencies
       run: npm install
     - name: Create production build folder
