--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,10 @@ jobs:
           shell: bash 
           working-directory: ./frontend
       steps:
+        - name: Checkout Code
+          uses: actions/checkout@v4
+          with:
+            refs: ${{ github.refs_name }}
         - name: Login to Docker Hub
           uses: docker/login-action@v3
           with:
