--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ defaults:
   run:
     shell: bash
 
+permissions:
+  actions: write
+  contents: write
+  
 jobs:
   Build-And-Test:
     if: ${{ github.event_name == 'pull_request' }}
