--- a/k8s/manifests/backend/deployment.yml
+++ b/k8s/manifests/backend/deployment.yml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: node-con
-        image: uj5ghare/eng-backend:latest
+        image: uj5ghare/eng-backend:"1.18.1"
         ports:
         - containerPort: 8000
         imagePullPolicy: Always
