--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -101,6 +101,11 @@ jobs:
     runs-on: ubuntu-24.04
     needs: [Build-And-Push-Frontend]
     steps:
+      - name: Login to Docker Registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Docker Scout
         id: docker-scout
         uses: docker/scout-action@v1
